# examples

./: .gitattributes  .gitignore  .travis.yml  3rdpartylicenses.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  WORKSPACE  angular.json  common-es2015.a597ed294f63726ac20d.js  common-es2015.bbe0c59c27651793a7dc.js  common-es2015.fe2615b8795e172b0abb.js  common-es5.a597ed294f63726ac20d.js  common-es5.bbe0c59c27651793a7dc.js  common-es5.fe2615b8795e172b0abb.js  common.312a64fcb20df210dcff.js  common.3d0e662a04454c7dcf12.js  common.a8021ddfeeac2bd23bd2.js  common.js  common.js.map  db.json  gulpfile.js  index.html  install.sh  main-es2015.08717196eb668b582154.js  main-es2015.650a555a7941f45afaf0.js  main-es2015.6fead7eda53c8f61f98e.js  main-es2015.ece514d4f6954d8e61b5.js  main-es5.08717196eb668b582154.js  main-es5.650a555a7941f45afaf0.js  main-es5.6fead7eda53c8f61f98e.js  main-es5.ece514d4f6954d8e61b5.js  main.71c45fdaf37413a1384c.js  main.894b40a51317b8ee7b8a.js  main.90acd1e05907812a19e3.js  main.93451253f1c4f40659f8.js  main.a12c81205051a158bdee.js  main.c05cb21da9cc1adab9fa.js  main.df106d56e3ea24ff4102.js  (+122 more)
src/: BUILD.bazel  index.html  polyfills.ts  styles.scss  typings.d.ts
src/app/: app-routing.module.ts  app.component.ts  app.module.ts
src/app/i18n/: custom-translate-loader.ts  en.ts  vi.ts
src/app/pages/common/: example-common.module.ts  layout.service.ts
src/app/pages/data/: data.service.ts
src/app/pages/form/: test-form-routing.module.ts  test-form.module.ts
src/app/pages/form/attachment/: attachment.component.html  attachment.component.scss  attachment.component.ts  attachment.module.ts
src/app/pages/form/design-icon/: design-icon.component.html  design-icon.component.scss  design-icon.component.ts
src/app/pages/form/file-upload/: file-upload.component.html  file-upload.component.ts
src/app/pages/form/form-elements/: form-elements.component.html  form-elements.component.scss  form-elements.component.ts
src/app/pages/form/number-format/: number-format.component.html  number-format.component.ts
src/app/pages/grid/: test-grid-routing.module.ts  test-grid.module.ts
src/app/pages/grid/grid-basic/: grid-basic.component.html  grid-basic.component.scss  grid-basic.component.ts
src/app/pages/grid/grid-editable/: grid-editable.component.html  grid-editable.component.ts
src/app/pages/grid/grid-grouping/: grid-grouping.component.html  grid-grouping.component.scss  grid-grouping.component.ts
src/app/pages/grid/grid-pagination/: grid-pagination.component.html  grid-pagination.component.ts
src/app/pages/home/: home.component.html  home.component.ts
src/app/pages/layout/menu/: menu.component.html  menu.component.scss  menu.component.ts
src/app/pages/list-view/: test-list-view-routing.module.ts  test-list-view.module.ts
src/app/pages/list-view/list-view-basic/: list-view-basic.component.html  list-view-basic.component.scss  list-view-basic.component.ts
src/app/pages/select/: test-select-routing.module.ts  test-select.module.ts
src/app/pages/select/mutil/: select-multi.component.ts  (+1 more)
src/app/pages/themes/: themes-routing.module.ts  themes.module.ts
src/assets/i18n/: common_en.properties  common_vi.properties  en.json
src/scss/: _app.scss
src/typing/: global.d.ts
(+22 files in other folders)
