package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_library","sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "history_server")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

sass_library(
    name = "menu-styles",
    srcs = ["//src/app/layout/menu/menu.component.scss"]
)
sass_binary(
    name = "styles",
    src = "styles.scss"
)

ng_module(
    name = "src",
    srcs = glob(["**/*.ts"], exclude = ["**/*.spec.ts", "test.ts"]),
    tsconfig = "//:tsconfig.json",
    assets = glob([
      #":menu-styles",
      "**/*.css",
      "**/*.html",
    ]),
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser-dynamic",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/router",
        "@angular//packages/forms",
        "@angular//packages/common/http",
        "@npm//@types",
        "@npm//typescript",
        "@npm//core-js",
        "@npm//rxjs",
        "@npm//rxjs-compat",
        "@npm//ngx-bootstrap",
        "@npm//inet-core",
        "@npm//inet-ui",
        "@npm//d3",
        "@npm//later",
        "@npm//interactjs",
        "@npm//jssip",
        "@rxjs"
    ],
)
# Needed because the prodserver only loads static files that appear under this
# package.
genrule(
    name = "zonejs",
    srcs = ["@npm//node_modules/zone.js:dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

history_server(
    name = "prodserver",
    data = [
        "index.html",
        ":bundle",
        ":zonejs",
    ],
)

ts_devserver(
    name = "devserver",
    port = 4200,
    additional_root_paths = [
        "npm/node_modules/zone.js/dist",
        "npm/node_modules/tslib",
    ],
    entry_module = "__main__/src/main",
    serving_path = "/bundle.min.js",
    static_files = [
        "@npm//node_modules/zone.js:dist/zone.min.js",
        "@npm//node_modules/tslib:tslib.js",
        "index.html",
    ],
    deps = [":src"]
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":src",
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser-dynamic/testing",
        "@npm//@types"
    ],
)

ts_web_test_suite(
    name = "test",
    srcs = ["@npm//node_modules/tslib:tslib.js"],
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
        # TODO(gregmagolan): re-enable firefox testing once fixed
        # See https://github.com/bazelbuild/rules_typescript/issues/296
        # "@io_bazel_rules_webtesting//browsers:firefox-local",
    ],
    deps = [
        ":test_lib",
        "@npm//karma-jasmine",
    ],
)

rollup_bundle(
    name = "bundle",
    entry_point = "src/main",
    deps = ["//src"],
)
